# dadengine

./: ..gitignore.un~  .CMakeLists.txt.un~  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DadEngine_2.0.sln  DadEngine_2.0.vcxproj  LICENSE  Lorem_Ipsum.txt  README.md  main.cpp  test_vk.frag  test_vk.frag.spv  test_vk_multiple.vert
DadEngine_2.0/: CMakeCache.txt  CMakeLists.txt  DadEngine_2.0.vcxproj  DadEngine_2.0.vcxproj.filters  Makefile  frag.spv  main.cpp  test.frag.spv  test.vert  test.vert.spv  test_vk_multiple.frag.spv  vert.spv
DadEngine_2.0/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Core.hpp  Debug.cpp  Debug.hpp  Defines.hpp  IFile.hpp  Iterators.hpp  Memory.hpp  PlatformEntryPoint.hpp  PlatformFile.hpp  PlatformThreads.hpp  PlatformTimers.hpp  PlatformTypes.hpp  PlatformWindow.hpp  Profile.hpp  Serialization.hpp  String.hpp  TArray.hpp  TDictionary.hpp
DadEngine_2.0/Core/Iterators/: CMakeLists.txt  LinearStackIterator.hpp
DadEngine_2.0/Core/Memory/: CMakeLists.txt  LinearStackAllocator.hpp  MemoryManager.cpp  MemoryManager.hpp
DadEngine_2.0/Core/Platform/: CMakeLists.txt
DadEngine_2.0/Core/Platform/Windows/: CMakeLists.txt  WindowsBinaryFileIO.hpp  WindowsFileIO.hpp  WindowsFileSystem.hpp  WindowsMemory.hpp  WindowsTextFileIO.hpp  WindowsThreads.hpp  WindowsTimers.hpp  WindowsTypes.hpp  WindowsWindow.cpp  WindowsWindow.hpp
DadEngine_2.0/Core/Serialization/: Archive.hpp  CMakeLists.txt  MemoryReader.hpp
DadEngine_2.0/Gameplay/: InputManager.hpp
DadEngine_2.0/Math/: Constants.hpp  Math.hpp  MathFunctions.cpp  MathFunctions.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Transform3D.hpp  Vector2f.cpp  Vector3f.cpp  Vector3f.hpp  Vector4f.cpp  Vector4f.hpp
DadEngine_2.0/Math/Matrix/: Matrix3x3.hpp
DadEngine_2.0/Math/Vector/: Vector2f.cpp  Vector2f.hpp  Vector3f.hpp
DadEngine_2.0/Rendering/: CMakeLists.txt  CommandBuffer.hpp  FramePacket.hpp  Framebuffer.hpp  Image.hpp  OpenGL.hpp  RawMesh.hpp  RawVertex.hpp  RenderCommand.hpp  RenderContext.hpp  RenderObject.hpp  RenderPass.hpp  Rendering.hpp  StaticMeshVertexFactory.hpp  VertexBuffer.hpp  ViewPacket.hpp
DadEngine_2.0/Rendering/Culling/: CMakeLists.txt  Camera.cpp  Camera.hpp  FramePacket.hpp  ViewPacket.hpp
DadEngine_2.0/Rendering/Feature/: RenderComponent.hpp  RenderingFeature.hpp  StaticMeshComponent.hpp  StaticMeshRenderingFeature.hpp
DadEngine_2.0/Rendering/Mesh/: RawVertex.hpp
DadEngine_2.0/Rendering/OpenGL/: OpenGLRenderContext.hpp
DadEngine_2.0/Rendering/RenderContext/: CMakeLists.txt  OpenGL.hpp  OpenGLES.hpp  OpenGLWrapper.cpp  OpenGLWrapper.hpp  RenderContext.hpp
DadEngine_2.0/Rendering/RenderContext/OpenGL/: OpenGLCommandBuffer.hpp  OpenGLFragmentShader.hpp  OpenGLFramebuffer.hpp  OpenGLGeometryShader.hpp  OpenGLRenderCommand.cpp  OpenGLRenderCommand.hpp  OpenGLRenderContext.cpp  OpenGLRenderContext.hpp  OpenGLShader.hpp  OpenGLVertexBuffer.hpp  OpenGLVertexShader.hpp  OpenGLWrapper.cpp  OpenGLWrapper.hpp
DadEngine_2.0/Rendering/Shader/: Material.hpp  Shader.h  Shader.hpp
DadEngine_2.0/Rendering/Texture/: Texture2D.hpp
DadEngine_2.0/Rendering/Vulkania/: VulkanDebug.cpp  VulkanDebug.hpp  VulkanHelper.cpp  VulkanHelper.hpp  VulkanRenderContext.cpp  VulkanRenderContext.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
DadEngine_2.0/Roadmap_Tasks/: checklist.tasks
src/: .main.cpp.un~  CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Debug.cpp
src/Core/Iterators/: Iterators.hpp
src/Core/Memory/: CMakeLists.txt  LinearStackAllocator.hpp  MemoryManager.hpp
src/Core/Platform/: CMakeLists.txt  Entrypoint.hpp  File.hpp  Memory.hpp  Threads.hpp
src/Core/Serialization/: Archive.hpp  CMakeLists.txt  MemoryReader.hpp  Serialization.hpp
src/Core/Types/: CMakeLists.txt  String.hpp
src/Gameplay/: Actor.cpp  CMakeLists.txt  CameraManager.hpp  Gameplay.hpp  IComponent.hpp
src/Math/: CMakeLists.txt  Constants.hpp  MathFunctions.cpp
src/Math/Matrix/: CMakeLists.txt  Matrix2x2.hpp  Matrix3x3.hpp
src/Math/Quaternion/: CMakeLists.txt  Quaternion.cpp
src/Math/Vector/: CMakeLists.txt
src/Rendering/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  Features.hpp  VertexBuffer.cpp
src/Rendering/Culling/: CMakeLists.txt  Camera.hpp  FramePacket.cpp  FramePacket.hpp  RenderNode.hpp  ViewPacket.cpp
src/Rendering/Feature/: CMakeLists.txt  StaticMeshRenderingFeature.cpp  StaticMeshRenderingFeature.hpp
src/Rendering/Mesh/: CMakeLists.txt  RawMesh.cpp  VertexFactory.hpp  VertexInputLayout.hpp
src/Rendering/RenderContext/: CMakeLists.txt  OpenGLWrapper.cpp  Vulkan.hpp
src/Rendering/Shader/: CMakeLists.txt
src/camera/: CMakeLists.txt  camera.cpp
src/core/: CMakeLists.txt  application.cpp  debug.cpp  profile.cpp
src/core/memory/: CMakeLists.txt  memory-manager.cpp
src/core/serialization/: CMakeLists.txt  archive.cpp
src/core/types/: CMakeLists.txt  string.cpp
src/gameplay/: .camera-manager.cpp.un~  CMakeLists.txt  actor.cpp  camera-manager.cpp  icomponent.cpp  input-manager.cpp
src/helpers/: CMakeLists.txt  file.cpp
src/loaders/: CMakeLists.txt  gltf-loader.cpp
src/math/: CMakeLists.txt  math-functions.cpp
src/math/matrix/: CMakeLists.txt  matrix2x2.cpp  matrix3x3.cpp  matrix4x4.cpp
src/math/quaternion/: CMakeLists.txt  quaternion.cpp
src/math/vector/: CMakeLists.txt  vector2.cpp  vector2f.cpp  vector3.cpp  vector3f.cpp  vector4.cpp  vector4f.cpp
src/model/: CMakeLists.txt  model.cpp
src/renderer/: CMakeLists.txt  opengl-renderer.cpp  vulkan-loader.cpp
src/rendering/: .CMakeLists.txt.un~  CMakeLists.txt  camera.cpp  command-buffer.cpp  renderer.cpp  vertex-buffer.cpp
src/rendering/culling/: CMakeLists.txt  camera.cpp  frame-packet.cpp  render-object.cpp  view-packet.cpp
src/rendering/feature/: CMakeLists.txt  static-mesh-rendering-feature.cpp
src/rendering/mesh/: CMakeLists.txt  raw-mesh.cpp  vertex-factory.cpp  vertex-input-layout.cpp
src/rendering/shader/: CMakeLists.txt  shader.cpp
src/window/: CMakeLists.txt  application.cpp  windows-window.cpp  x-window.cpp
test/core/: CMakeLists.txt
(+888 files in other folders)
